# downloader

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  compose.yml  config.example.toml  go.mod  go.sum  go.work  go.work.sum  sqlc.yaml
.github/workflows/: docker.yml  node.yml  release.yml  rust.yml
apps/node/: go.mod  go.sum  main.go
apps/node/config/: config.go
apps/node/server/: auth_extractors.go  helpers.go  routes.go  server.go
apps/node/tcp/: handlers.go  helpers.go  server.go
apps/proxy/: go.mod  go.sum  main.go
apps/proxy/config/: config.go
apps/proxy/repository/auth/: crypt.go  jwt_test.go  models.go  utils.go
apps/proxy/repository/user/: models.go  user.go  utils.go
apps/proxy/server/: auth_extractors.go  file_routes.go  helpers.go  models.go  routes.go  server.go  user_routes.go
benches/: object_manager.rs
cmd/node/: main.go
cmd/node/config/: config.go
cmd/node/server/: auth_extractors.go  routes.go  server.go
cmd/node/tcp/: handlers.go  helpers.go  server.go
cmd/proxy/: main.go
cmd/proxy/config/: config.go
cmd/proxy/repository/auth/: auth.go  crypt.go  jwt_test.go  models.go  utils.go
cmd/proxy/repository/user/: models.go  user.go  utils.go
cmd/proxy/server/: auth_extractors.go  file_routes.go  helpers.go  server.go  user_routes.go
dba/: go.mod  queries.sql.go
frontend/: .prettierrc  eslint.config.js  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.ts  vite.config.ts
frontend/src/: app.html
frontend/src/lib/: auth.ts  error.ts  file.ts  user.ts  utils.ts
frontend/src/lib/assets/icons/: BugIcon.svelte  ClipboardCheckIcon.svelte  ClipboardIcon.svelte  CloseIcon.svelte  CloudUploadIcon.svelte  DownloadIcon.svelte  FilePenIcon.svelte  GithubIcon.svelte  LogoutIcon.svelte  RefreshIcon.svelte  SearchIcon.svelte  ShareNodesIcon.svelte  TrashBinIcon.svelte  UploadIcon.svelte  UserIcon.svelte  UserSettingsIcon.svelte
frontend/src/lib/components/: Avatar.svelte  Form.svelte  Header.svelte
frontend/src/lib/components/file/: Clipboard.svelte  FileInfo.svelte  FileModal.svelte  FileRow.svelte  FileShare.svelte
frontend/src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte
frontend/src/routes/account/: +layout.svelte  +page.svelte
frontend/src/routes/account/password/: +page.svelte
frontend/src/routes/auth/: +layout.svelte
frontend/src/routes/auth/login/: +page.svelte
frontend/src/routes/auth/signup/: +page.svelte
frontend/src/routes/files/: +page.svelte
internal/dba/: custom.go  db.go  models.go  querier.go  queries.sql.go
internal/errors/: errors.go  var_errors.go
internal/transport/: transport.go
migrations/: 0001_add_object.down.sql  0001_add_object.up.sql  0001_add_user.down.sql  0001_add_user.up.sql  0002_add_object.up.sql
node/: config.example.jsonc  go.mod  go.sum  main.go
node/config/: config.go
node/middlewares/: protected.go  user.go
node/routes/: file_delete.go  file_download.go  file_submit.go  files.go  router.go  stats.go
node/server/: server.go
node/services/: auth.go  config.go  jwt.go  types.go
scripts/: gen-jwt-key.sh  gen-ssl-cert.sh  run.sh
shared/: go.mod  go.sum
shared/auth/: auth.go  jwt.go  jwt_test.go  models.go  utils.go
shared/errors/: errors.go  var_errors.go
shared/logger/: http.go  logger.go
shared/tcp/: server.go
shared/user/: user.go  utils.go
sql/: queries.sql
sql/dba/: custom.go  db.go  go.mod  go.sum  models.go  querier.go  queries.sql.go
sql/migrations/: 000001_add_users.down.sql  000001_add_users.up.sql  000002_add_nodes.down.sql  000002_add_nodes.up.sql  000003_add_files.down.sql  000003_add_files.up.sql  000004_user_to_many_files.down.sql  000004_user_to_many_files.up.sql  000005_node_to_many_files.down.sql  000005_node_to_many_files.up.sql
src/: config.rs  errors.rs  lib.rs  main.rs  server.rs
src/auth/: axum.rs  mod.rs  repository.rs  routes.rs
src/storage/: manager.rs  mod.rs  repository.rs  routes.rs
src/storage/manager/: mod.rs  stdfs.rs  test_utils.rs
src/user/: mod.rs  repository.rs  routes.rs
src/utils/: crypto.rs  extractors.rs  fmt.rs  mod.rs  serde.rs  sys.rs
