[package]
name = "downloader"
version = "0.0.0"
edition = "2021"
license = "AGPL-3.0"

description = "A web server to host files"

[profile.release]
panic = "unwind"
opt-level = 3
lto = true
codegen-units = 1

[features]
full = ["embed"]
embed = ["dep:rust-embed", "tower-http/compression-full"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

uuid = { version = "1.10", features = ["v4", "fast-rng", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
hex = "0.4"
bitflags = { version = "2.6", features = ["serde"] }

sha2 = "0.10"
bcrypt = "0.15"
jsonwebtoken = "9"

clap = { version = "4.5", features = ["derive"] }
thiserror = { version = "1.0" }

tokio = { version = "1", features = [
    "rt-multi-thread",
    "io-util",
    "net",
    "time",
    "macros",
    "sync",
    "signal",
    "fs",
] }
pin-project-lite = "0.2"
tokio-util = "0.7"
futures-util = "0.3"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

axum = { version = "=0.7.5", features = ["http2", "multipart"] }
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
tower-http = { version = "0.5", features = [
    "catch-panic",
    "cors",
    "decompression-full",
    "normalize-path",
    "sensitive-headers",
    "set-header",
    "trace",
] }
tower = "0.4"
mime = "0.3"
rust-embed = { version = "8.5", optional = true, features = [
    "axum-ex",
    "mime-guess",
] }

sqlx = { version = "0.8", default-features = false, features = [
    "macros",
    "migrate",
    "runtime-tokio",
    "sqlite",
    "tls-rustls",
] }

[dev-dependencies]
rand = "0.8"
tempfile = "3"
test-log = { version = "0.2", features = ["trace"] }
